fixed text flickering on hover v2

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -208,7 +208,7 @@ nav{
 .interests_item:hover{
     font-size: 3vh;
     transition: all 0.3s ease;
-    padding: 0 10px;
+    padding: 5px;
 	margin-right: 0px;
 }
 
